[gd_scene load_steps=2 format=3 uid="uid://csmppkkvj7530"]

[ext_resource type="Script" uid="uid://ywdw0fvj4bih" path="res://tclock.gd" id="1_7yurv"]

[node name="TClock" type="Window"]
transparent_bg = true
position = Vector2i(1000, 1000)
size = Vector2i(191, 76)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
borderless = true
always_on_top = true
transparent = true
unfocusable = true
theme_override_font_sizes/title_font_size = 32
script = ExtResource("1_7yurv")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClockDigits" type="Label" parent="CenterContainer"]
layout_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.874343, 0.757747, 0.233592, 1)
theme_override_font_sizes/font_size = 40
text = "12:30:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="gui_input" from="CenterContainer/ClockDigits" to="." method="_on_clock_digits_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
